<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddClientActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_name" />

    <EditText
        android:id="@+id/first_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/last_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender" />


    <RadioGroup
        android:id="@+id/gender_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_gender_radiobutton"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/female_gender_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/age_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/age_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="18"
            android:max="65"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <Spinner
        android:id="@+id/level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/level_items"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/active_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_switch" />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/add_client_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_add" />

</LinearLayout>